# doomlike-engine

./: CMakeLists.txt  README.md
demo_files/: level.txt
include/: hcgmath.h  hclib.h  nuklear.h  nuklear_sdl3_renderer.h
src/: main.c
src/engine/: component_ids.h
src/engine/asset/: asset_manager.h
src/engine/core/: app.c  app.h  camera.c  camera.h  error.h  layer.c  layer.h  level.c  level.h  raycast_renderer.c  raycast_renderer.h  renderer.c  renderer.h  texture.c  texture.h  texture_atlas.c  texture_atlas.h  window.c  window.h
src/engine/core/ecs/: component.c  component.h  ecs.c  ecs.h  entity.h
src/engine/core/ecs/components/: billboard.c  billboard.h  camera.c  camera.h  level_collider.c  level_collider.h  light.c  light.h  sector_component.c  sector_component.h  sprite.c  sprite.h  transform.c  transform.h  velocity.c  velocity.h
src/engine/editor/: level_editor_panels.c  level_editor_panels.h  nuklear_init.c  nuklear_init.h
src/engine/implementations/: hclib.c  nuklear_sdl3_renderer.c
src/engine/jobs/: job.c  job.h  thread_pool.c  thread_pool.h
src/engine/layers/: debug_info_layer.c  debug_info_layer.h  game_layer.c  game_layer.h  ingame_editor_layer.c  ingame_editor_layer.h  level_editor_layer.c  level_editor_layer.h
src/engine/lighting/: lightmap.c  lightmap.h
src/engine/utils/: utils.c  utils.h  version.h
